--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ author:
   medium           : # URL
   pinterest        : # Username
   soundcloud       : # Username
-  steam            : https://steamcommunity.com/profiles/76561199492264453/
+  steam            : "76561199492264453"
   telegram         : # URL
   tumblr           : # Username
   twitter          : # Username for X / Twitter
