--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "Symnluckea/symnluckea.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   name             : "Rynq Kwos"
   pronouns         : # example: "she/her"  
   bio              : "Master's Degree, SE, DLUT"
@@ -33,7 +33,7 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "NaN"
+  googlescholar    : # URL
   impactstory      : # URL
   orcid            : "https://orcid.org/0009-0001-7768-9286"
   semantic         : # URL
