--- a/_config.yml
+++ b/_config.yml
@@ -225,6 +225,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+  inspirations:
+    output: true
+    permalink: /:collection/:path/
 
 
 # These settings control how pages and collections are included in the site
@@ -280,6 +283,14 @@ defaults:
       type: talks
     values:
       layout: talk
+      author_profile: true
+      share: true
+  # _inspirations
+  - scope:
+      path: ""
+      type: inspirations
+    values:
+      layout: inspirations
       author_profile: true
       share: true
 
