--- a/_config.yml
+++ b/_config.yml
@@ -290,7 +290,7 @@ defaults:
       path: ""
       type: inspirations
     values:
-      layout: inspirations
+      layout: single
       author_profile: true
       share: true
 
